# ChangeLog for net-misc/packETH
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/packETH/ChangeLog,v 1.5 2009/11/01 22:41:57 jer Exp $

*packETH-1.6.3 (01 Nov 2009)

  01 Nov 2009; Jeroen Roovers <jer@gentoo.org> +packETH-1.6.3.ebuild,
  +files/packETH-1.6.3-gentoo.patch, +files/packETH-1.6.3-pixmaps.patch:
  Version bump thanks to DrChandra (bug #260381). Respect CC, CFLAGS,
  LDFLAGS, and point to proper pixmaps directory.

  30 Jan 2008; <pva@gentoo.org> -packETH-1.3.ebuild, packETH-1.4.ebuild:
  Fixed missing gtk+ dependency, bug 205423, thank Evil Compile Person <bugs
  AT dev.gentooexperimental.org> for report. Removed old.

*packETH-1.4 (14 Apr 2007)

  14 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> +packETH-1.4.ebuild:
  1.4 version bump.

  15 Oct 2006; Thomas Cort <tcort@gentoo.org> packETH-1.3.ebuild:
  Added ~amd64 keyword wrt Bug #151443.

*packETH-1.3 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +packETH-1.3.ebuild:
  Initial commit, thanks to Davide Rebeccani in bug #118525 for the ebuild
