@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/packETH
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/packETH/ChangeLog,v 1.5 2009/11/01 22:41:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/packETH/ChangeLog,v 1.6 2009/11/01 22:44:39 jer Exp $
+
+  01 Nov 2009; Jeroen Roovers <jer@gentoo.org> -packETH-1.4.ebuild:
+  Remove old.
 
 *packETH-1.6.3 (01 Nov 2009)
 
